--- a/views/common/scripts.pug
+++ b/views/common/scripts.pug
@@ -1,16 +1,7 @@
-// scripts
+//-scripts
 script(src='./libs/jquery.js')
 script(src='./libs/bootstrap/dist/js/bootstrap.min.js')
-
-script(src='./js/utils.js')
-
-script(src='./js/models/objectModel.js')
-script(src='./js/models/tank.js')
-script(src='./js/models/gun.js')
-script(src='./js/models/target.js')
-script(src='./js/models/bullet.js')
-
-script(src='./js/render/canvas.js')
-script(src='./js/render/render.js')
+script(src='./libs/handlebars.js')
+script(src='./libs/navigo.js')
 
 script(src='./js/dom.js')
