--- a/views/home.pug
+++ b/views/home.pug
@@ -1,8 +1,4 @@
 extends common/layout
 
 block main-content
-	h3 Gun trajectory
-	div.canvas-container 
-		canvas#background-canvas(width="700", height="400")
-		canvas#main-canvas(width="700", height="400")
-		
+	h3 App works!
