--- a/views/common/head.pug
+++ b/views/common/head.pug
@@ -1,6 +1,6 @@
 head
-	title HitTheTarget
+	title ShareIt
 	meta(charset='UTF-8')
 	meta(name='viewport', content='width=device-width, initial-scale=1')
-	link(href='./libs/bootstrap/dist/css/bootstrap.min.css', rel='stylesheet')
-	link(href='./bundle.css', rel='stylesheet')
+	link(rel='stylesheet', href='./libs/bootstrap/dist/css/bootstrap.min.css', type='text/css')
+	link(rel='stylesheet', href='./bundle.css', type='text/css')
