--- a/views/common/head.pug
+++ b/views/common/head.pug
@@ -2,5 +2,6 @@ head
 	title ShareIt
 	meta(charset='UTF-8')
 	meta(name='viewport', content='width=device-width, initial-scale=1')
+	link(rel='icon', href='./assets/images/icon-ninja.png')
 	link(rel='stylesheet', href='./libs/bootstrap/dist/css/bootstrap.min.css', type='text/css')
 	link(rel='stylesheet', href='./bundle.css', type='text/css')
