--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -32,9 +32,12 @@ main {
 
 #footer {
 	background-color: #000000;
-	color: whitesmoke;
+	font-size: 22px;
+	font-weight: bold;
+	color: #7F7F7F;
 	text-align: center;
 	padding: 2%;
+	padding-top: 3%;
 	min-height: 100px;
 	
 }
