--- a/app/public/css/bundle-css/bundle.css
+++ b/app/public/css/bundle-css/bundle.css
@@ -8,33 +8,52 @@
   padding-top: 3%;
   min-height: 100px;
 }
+.header {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
 .header a {
   font-size: 22px;
   font-weight: bold;
   color: #7F7F7F;
 }
 
-.header #brand {
-  margin-top: -10px;
-}
-
 .header .navbar {
   background-color: #000000;
 }
 
-.header .navbar ul .nav-li-a:focus {
+.header .navbar #brand {
+  margin-top: -10px;
+}
+
+.header .navbar ul .nav-li {
+  margin-top: 0;
+}
+
+.header .navbar ul .nav-li .nav-li-a:focus {
   text-shadow: -1px 1px silver;
 }
 
-.header ul {
+.header .navbar ul {
   float: right;
 }
 
-.header .dropdown-menu {
+.header .navbar .dropdown-menu {
+  padding: 5px;
   border: 2px solid whitesmoke;
   border-radius: 2%;
   background-color: #000000;
-  margin-left: -80px;
+  margin-left: -115px;
+}
+
+@media only screen and (min-width: 768px) {
+  .header .navbar #brand {
+    margin-top: 0;
+  }
+
+  .header .navbar ul .nav-li {
+    margin-top: 15px;
+  }
 }
 .main {
   padding: 50px;
