--- a/app/public/sass/header.scss
+++ b/app/public/sass/header.scss
@@ -1,30 +1,52 @@
 .header {
+	font-family: Verdana, Geneva, Tahoma, sans-serif;
+
 	a {
 		font-size: 22px;
 		font-weight: bold;
 		color: #7F7F7F;
 	}
 
-	#brand {
-		margin-top: -10px;
-	}
-
 	.navbar {
 		background-color: #000000;
 
-		ul .nav-li-a:focus {
+		#brand {
+			margin-top: -10px;
+		}
+
+		ul .nav-li {
+			margin-top: 0;
+		}
+
+		ul .nav-li .nav-li-a:focus {
 			text-shadow: -1px 1px silver;
 		}
-	}
 
-	ul {
-		float: right;
-	}
+		ul {
+			float: right;
+		}
 
-	.dropdown-menu {
-		border: 2px solid whitesmoke;
-		border-radius: 2%;
-		background-color: #000000;
-		margin-left: -80px;
+		.dropdown-menu {
+			padding: 5px;
+			border: 2px solid whitesmoke;
+			border-radius: 2%;
+			background-color: #000000;
+			margin-left: -115px;
+		}
+	}
+}
+
+
+@media only screen and (min-width : 768px) {
+	.header {
+		.navbar {
+			#brand {
+				margin-top: 0;
+			}
+
+			ul .nav-li {
+				margin-top: 15px;
+			}
+		}
 	}
 }
