--- a/app/views/common/header.pug
+++ b/app/views/common/header.pug
@@ -15,9 +15,12 @@ header.header
         li.nav-li
           a.nav-li-a(href='/about') About
         li.nav-li
-          a.nav-li-a(href='/news') News
+          a.nav-li-a(href='/blog') Blog
         li.nav-li
-          a.nav-li-a(href='/collection') Collection
+          a.nav-li-a(href='/news') News
+        li
+          a#profile-a(href='/profile')
+            img#profile-link(src='', alt='img', title='User profile', width='35px', height='35px')
         li.nav-li
           a.nav-li-a.dropdown.dropdown-toggle(data-toggle='dropdown', aria-haspopup='true', aria-expanded='false') Settings
             .dropdown-menu(aria-labelledby='dropdownMenuButton')
