--- a/app/views/common/header.pug
+++ b/app/views/common/header.pug
@@ -11,16 +11,11 @@ header.header
     #bs-navbar-collapse.collapse.navbar-collapse.nav-right
       ul.nav.navbar-nav.navbar-nav-right
         li.nav-li
-          a.nav-li-a(href='/home') Home
-        li.nav-li
           a.nav-li-a(href='/about') About
         li.nav-li
           a.nav-li-a(href='/blog') Blog
         li.nav-li
-          a.nav-li-a(href='/news') News
-        li
-          a#profile-a(href='/profile')
-            img#profile-link(src='', alt='img', title='User profile', width='35px', height='35px')
+          a.nav-li-a(href='/cvs') CVs
         li.nav-li
           a.nav-li-a.dropdown.dropdown-toggle(data-toggle='dropdown', aria-haspopup='true', aria-expanded='false') Settings
             .dropdown-menu(aria-labelledby='dropdownMenuButton')
