--- a/app/views/common/scripts.pug
+++ b/app/views/common/scripts.pug
@@ -1,7 +1,7 @@
 //-scripts
-script(src='./libs/jquery.js')
+script(src='./libs/jquery.min.js')
 script(src='./libs/bootstrap/dist/js/bootstrap.min.js')
-script(src='./libs/handlebars.js')
-script(src='./libs/navigo.js')
+script(src='./libs/handlebars.min.js')
+script(src='./libs/navigo.min.js')
 
 script(src='./js/dom.js')
