--- a/app/views/common/layout.pug
+++ b/app/views/common/layout.pug
@@ -4,17 +4,15 @@ html(lang="en")
     title ShareIt
     meta(charset='UTF-8')
     meta(name='viewport', content='width=device-width, initial-scale=1')
-    link(rel='icon', href='./assets/images/icon-ninja.png')
-    link(rel='stylesheet', href='./libs/bootstrap/dist/css/bootstrap.min.css', type='text/css')
+    link(rel='icon', href='./assets/images/icon.png')
     link(rel='stylesheet', href='./bundle.css', type='text/css')
 
   body
-    #wrapper
-      include header
+    include header
 
-      main.main
-        block main-content
+    main.main
+      block main-content
 
-      include footer
+    include footer
 
-      include scripts
+    include scripts
