--- a/app/views/common/footer.pug
+++ b/app/views/common/footer.pug
@@ -1,2 +1,22 @@
-footer.footer
-	div Absend&copy;2017
+footer
+  #logo
+    a(href='/home')
+      img(src='./assets/images/icon.png', alt='Logo', width='40px', height='40px')
+      img(src='./assets/images/logo.png', alt='Logo', width='140px', height='40px')
+    |         
+  nav.foot
+    ul.menu-bar-foot
+      li.ab
+        a.menu-bar-item(href='/about') ABOUT
+      |                 
+      li.ab
+        a.menu-bar-item(href='/blog') BLOG
+      |                 
+      li
+        a.menu-bar-item(href='/cvs') CV
+      |    
+    |             
+    .menu-bar-btn-foot
+      button.lines-button-foot.lines
+        span
+    |
