--- a/app/ui/bundle.css
+++ b/app/ui/bundle.css
@@ -1,8 +1,9 @@
-*{margin:0;padding:0;border:0}body{background-color:#f5f5f5}header,footer{background-color:black;max-height:45px;padding-top:5px;padding-left:5px}
+*{margin:0;padding:0;border:0}header,footer{background-color:black;max-height:45px;padding-top:5px;padding-left:25px}
 header #logo,footer #logo{width:70%}header nav,footer nav{padding:0}header nav ul.menu-bar,header nav ul.menu-bar-foot,footer nav ul.menu-bar,footer nav ul.menu-bar-foot{display:none;float:right;list-style-type:none;background:black;width:50%;cursor:pointer}
 header nav ul.menu-bar li,header nav ul.menu-bar-foot li,footer nav ul.menu-bar li,footer nav ul.menu-bar-foot li{background-color:#c3c3c3;margin:5px;padding:2px 2px 2px 20%}
 header nav ul.menu-bar li a,header nav ul.menu-bar-foot li a,footer nav ul.menu-bar li a,footer nav ul.menu-bar-foot li a{color:black;font-family:Arial,Helvetica,sans-serif;font-weight:bold;text-decoration:inherit;padding:2px}
 header nav ul.menu-bar li a:hover,header nav ul.menu-bar-foot li a:hover,footer nav ul.menu-bar li a:hover,footer nav ul.menu-bar-foot li a:hover{text-decoration:underline;color:#f5f5f5}
+header nav ul.menu-bar li img,header nav ul.menu-bar-foot li img,footer nav ul.menu-bar li img,footer nav ul.menu-bar-foot li img{margin-top:5px}
 header nav .menu-bar-btn,footer nav .menu-bar-btn{background-color:#6f6f6f;width:27px;height:27px;border:1px solid black;border-radius:10%;padding:2px;padding-top:4px;position:absolute;top:8px;right:13px;cursor:pointer}
 header nav .menu-bar-btn .lines-button,footer nav .menu-bar-btn .lines-button{position:relative;left:16px;top:-6px;float:right;overflow:hidden;margin:0;padding:0;width:60px;height:32px;font-size:0;text-indent:-9999px;-webkit-appearance:none;-moz-appearance:none;appearance:none;box-shadow:none;border-radius:none;border:0;cursor:pointer;-webkit-transition:background .3s;transition:background .3s}
 header nav .menu-bar-btn .lines-button:focus,footer nav .menu-bar-btn .lines-button:focus{outline:0}
@@ -36,7 +37,7 @@ header nav .menu-bar-btn-foot .lines.close span::before,footer nav .menu-bar-btn
 header nav .menu-bar-btn-foot .lines.close span::after,footer nav .menu-bar-btn-foot .lines.close span::after{bottom:0;-webkit-transform:rotate(-45deg);-ms-transform:rotate(-45deg);transform:rotate(-45deg);visibility:visible}
 header nav.foot ul,footer nav.foot ul{margin-top:-135px}@media only screen and (min-width:1220px){body{background-color:#ece6e6;background-image:url("../assets/images/bg-body.jpg");background-size:100%;padding-left:15%;padding-right:5%}
 header #logo,footer #logo{display:inline-block;width:20% !important}header nav,footer nav{display:inline-block;width:79% !important}
-header nav ul.menu-bar,header nav ul.menu-bar-foot,footer nav ul.menu-bar,footer nav ul.menu-bar-foot{width:25% !important;display:inherit !important}
+header nav ul.menu-bar,header nav ul.menu-bar-foot,footer nav ul.menu-bar,footer nav ul.menu-bar-foot{width:26% !important;display:inherit !important}
 header nav ul.menu-bar li,header nav ul.menu-bar-foot li,footer nav ul.menu-bar li,footer nav ul.menu-bar-foot li{background-color:black !important;display:inline-block;padding:2px 2px 0 2px !important;margin:0 !important}
 header nav ul.menu-bar li a,header nav ul.menu-bar-foot li a,footer nav ul.menu-bar li a,footer nav ul.menu-bar-foot li a{color:#c0c0c0 !important}
 header nav ul.menu-bar li.ab,header nav ul.menu-bar-foot li.ab,footer nav ul.menu-bar li.ab,footer nav ul.menu-bar-foot li.ab{border-right:1px solid #c0c0c0 !important}
