--- a/app/ui/css/bundle-css/bundle.css
+++ b/app/ui/css/bundle-css/bundle.css
@@ -5,16 +5,12 @@
   border: 0;
 }
 
-body {
-  background-color: #F5F5F5;
-}
-
 header,
 footer {
   background-color: black;
   max-height: 45px;
   padding-top: 5px;
-  padding-left: 5px;
+  padding-left: 25px;
 }
 
 header #logo,
@@ -65,6 +61,13 @@ footer nav ul.menu-bar li a:hover,
 footer nav ul.menu-bar-foot li a:hover {
   text-decoration: underline;
   color: #F5F5F5;
+}
+
+header nav ul.menu-bar li img,
+header nav ul.menu-bar-foot li img,
+footer nav ul.menu-bar li img,
+footer nav ul.menu-bar-foot li img {
+  margin-top: 5px;
 }
 
 header nav .menu-bar-btn,
@@ -374,7 +377,7 @@ footer nav.foot ul {
   header nav ul.menu-bar-foot,
   footer nav ul.menu-bar,
   footer nav ul.menu-bar-foot {
-    width: 25% !important;
+    width: 26% !important;
     display: inherit !important;
   }
 
