--- a/app/ui/sass/header.scss
+++ b/app/ui/sass/header.scss
@@ -7,15 +7,11 @@ $nav-text-hover: rgb(195, 195, 195);
     border: 0;
 }
 
-body {
-    background-color: #F5F5F5;
-}
-
 header, footer {
     background-color: $header-bg-color;
     max-height: 45px;
     padding-top: 5px;
-    padding-left: 5px;
+    padding-left: 25px;
 
     #logo {
         width: 70%;
@@ -49,6 +45,10 @@ header, footer {
                         text-decoration: underline;
                         color: #F5F5F5;
                     }
+                }
+
+                img {
+                    margin-top: 5px;
                 }
             }
         } //ul
@@ -137,7 +137,7 @@ header, footer {
                 -webkit-transition-duration: 0.3s, 0.3s;
                 transition-duration: 0.3s, 0.3s;
             }
-    
+
             .lines span::before {
                 -webkit-transition-property: top, -webkit-transform;
                 transition-property: top, transform;
@@ -147,7 +147,7 @@ header, footer {
                 -webkit-transition-property: bottom, -webkit-transform;
                 transition-property: bottom, transform;
             }
-    
+
             .lines.close {
                 background: none;
             }
@@ -329,8 +329,9 @@ header, footer {
             // border:  1px solid blue;
             ul.menu-bar, ul.menu-bar-foot
             {
-                width: 25% !important;
+                width: 26% !important;
                 display: inherit !important;
+
                 li {
                     background-color: $header-bg-color !important;
                     display: inline-block;
